<resources>
    <string name="app_name">TDC Firebase App</string>
    <string name="title_tasks">Tarefas</string>
    <string name="title_tasks_all">Todas</string>
    <string name="title_tasks_pending">Pendentes</string>
    <string name="title_tasks_done">Concluídas</string>
    <string name="title_account">Conta</string>
    <string name="title_profile">Perfil</string>
    <string name="desc_add_task">Adicionar Tarefa</string>
    <string name="open_drawer">Abrir</string>
    <string name="close_drawer">Fechar</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Senha</string>
    <string name="confirm_password_hint">Confirmar senha</string>
    <string name="sign_in_hint">Entrar</string>
    <string name="forgot_password_hint">Esqueceu a senha?</string>
    <string name="or_hint">ou</string>
    <string name="sign_up_hint">Criar conta</string>
    <string name="title_create_account">Criar conta</string>
    <string name="title_forgot_password">Esqueci a senha</string>
    <string name="description_forgot_password">Entre com o email cadastrado, enviaremos um link de redefinição de senha para o seu email</string>
    <string name="title_forgot_password_dialog">Quase lá</string>
    <string name="message_forgot_password_dialog">Enviamos um email para redefinição de senha para seu email, por favor cheque sua caixa de entrada.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_task_title_hint">Nova Tarefa</string>
    <string name="new_task_endpoint_hint">Prazo</string>
    <string name="create_new_task_hint">Salvar</string>
    <string name="new_task_endpoint_helper">Deixar em branco caso não tenha prazo determinado</string>
    <string name="save_task_hint">Salvar</string>
    <string name="delete_task_hint">Remover</string>
    <string name="close_fragment_hint">Fechar</string>
    <string name="anonimous_string">Anônimo</string>
</resources>