<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_tasks">

    <fragment
        android:id="@+id/navigation_tasks"
        android:name="com.example.tdcfirebaseapp.pages.tasks.TaskFragment"
        android:label="@string/title_tasks"
        tools:layout="@layout/fragment_task_item" />

    <fragment
        android:id="@+id/navigation_finished_tasks"
        android:name="com.example.tdcfirebaseapp.pages.tasks.FinishedTaskFragment"
        android:label="@string/title_tasks_done"
        tools:layout="@layout/fragment_done_task" />

    <fragment
        android:id="@+id/navigation_unfinished_tasks"
        android:name="com.example.tdcfirebaseapp.pages.tasks.UnfinishedTasksFragment"
        android:label="@string/title_tasks_done"
        tools:layout="@layout/fragment_unfinished_tasks" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.tdcfirebaseapp.pages.profile.NotificationsFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_notifications" />
</navigation>